fix for safari bug overflow-hidden not working with border-radius

--- a/blocks/hubspot-form/hubspot-form.css
+++ b/blocks/hubspot-form/hubspot-form.css
@@ -90,6 +90,9 @@
   overflow: hidden;
   width: 120px;
   text-align: center;
+
+  /* fix for safari bug on overflow hidden not working */
+  z-index: 0;
 }
 
 .embed-hbspot-form .actions .hs-button{
